--- a/galeriaarte-back/pom.xml
+++ b/galeriaarte-back/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     
 	<parent>
-		<groupId>co.edu.uniandes.kadda</groupId>
+		<groupId>co.edu.uniandes.kadda.galeriaarte</groupId>
 		<artifactId>galeriaarte</artifactId>
 		<version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -17,7 +17,18 @@
             <artifactId>eclipselink</artifactId>
             <version>2.6.2</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <version>1.1.11.Final</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
