--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>galeriaarte</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>boda</name>
+    <name>galeriaarte</name>
  
     <modules>
         <module>galeriaarte-back</module>
