--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,39 @@
               <type>pom</type>
          </dependency>
     </dependencies>
-    
+    <build>
+        <plugins> 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.6.201602180812</version>        
+                <executions>
+                    <execution>
+                        <goals>  
+                            <goal>prepare-agent</goal>
+                            <goal>prepare-agent-integration</goal>
+                            <goal>report</goal>
+                            <goal>report-integration</goal>    
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                <destFile>${sonar.jacoco.reportPath}</destFile>
+            </configuration>
+            </plugin>  
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
