--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,7 @@
     <packaging>pom</packaging>
     <name>galeriaarte</name>
  
-    <modules>
-        <module>galeriaarte-back</module>
-        <module>galeriaarte-web</module>
-    </modules>
+    <modules></modules>
 	
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
